--- a/servicios.css
+++ b/servicios.css
@@ -46,7 +46,7 @@
     font-size: 1.875rem;
     font-weight: 700;
     margin-bottom: 1.5rem;
-    color: #ffdb58;
+    color: aliceblue
 }
 
 .service-card img {
@@ -71,7 +71,7 @@
 .service-details {
     margin-top: 1.5rem;
     padding-left: 1rem;
-    border-left: 0.25rem solid #ffdb58;
+    border-left: 0.25rem solid #ffffff;
 }
 
 .service-details li {
@@ -82,7 +82,7 @@
     transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
     padding: 0.5rem 1rem;
     border-radius: 0.375rem;
-    background-color: #3b82f6;
+    background-color: #408f8a;
     color: #ffffff;
     text-align: center;
     display: inline-block;
@@ -91,7 +91,7 @@
 }
 
 .service-details li:hover {
-    background-color: #2563eb;
+    background-color:  rgba(85, 130, 139, 0.7);
     color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
