--- a/servicios.css
+++ b/servicios.css
@@ -26,14 +26,26 @@
         grid-template-columns: repeat(3, 1fr);
     }
 }
-
+.call-to-action {
+    display: flex;
+    justify-content: center; /* Centra el botón horizontalmente */
+    padding: 2rem 0; /* Añade un poco de espacio arriba y abajo */
+     /* Un fondo ligero para que el botón destaque */
+     /* Una línea sutil en la parte superior */
+    margin-top: 1%;
+}
+.service-card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 4px;
+    margin-bottom: 1rem;
+}
 .service-card {
-    background-color: #112e31;
-    border-radius: 0.5rem;
-    padding: 2rem;
-    margin-bottom: 2rem;
-    color: #f8fafc;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 1.5rem;
+    text-align: center; /* Agrega esta línea para centrar el texto */
 }
 
 .service-card:hover {
@@ -42,22 +54,15 @@
 }
 
 .service-card h3 {
-    text-align: center;
-    font-size: 1.875rem;
-    font-weight: 700;
-    margin-bottom: 1.5rem;
-    color: aliceblue
-}
-
-.service-card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 0.5rem;
+    color: #333;
     margin-bottom: 1rem;
-    object-fit: cover;
-    height: 200px;
 }
 
+.service-card p {
+    color: #555;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+}
 .service-card p {
     background-color: rgba(85, 130, 139, 0.7);
     padding: 1rem;
@@ -74,20 +79,27 @@
     border-left: 0.25rem solid #ffffff;
 }
 
-.service-details li {
+.service-card p {
+    color: #555;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+}
+
+.service-card .service-details {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 0;
+}
+
+.service-card .service-details li {
+    color: #777;
+    font-size: 0.9rem;
     margin-bottom: 0.5rem;
-    list-style-type: none;
-    cursor: pointer;
-    text-decoration: none;
-    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-    padding: 0.5rem 1rem;
-    border-radius: 0.375rem;
-    background-color: #408f8a;
-    color: #ffffff;
-    text-align: center;
-    display: inline-block;
-    width: 90%;
-    margin: 0.5rem auto;
+}
+
+.service-card .service-details li span {
+    font-weight: bold;
+    color: #555;
 }
 
 .service-details li:hover {
